# Tuscarora

./: .gitignore  .gitmodules  SyncPrivateToPublic.sh  SyncPublicToPrivate.sh
TuscaroraFW/: .gitignore  CMakeLists.txt  License.txt  README  Release_Notes.txt  SubmoduleUpdate.sh  clean_dce_dir.sh  cmakeClean.sh  cmake_windows.bat  cmake_windows.ps1  install.sh  install_rpi_toolchain.sh  orchestrate.sh  runOrDebug.sh  stl-views.gdb  validate.sh
TuscaroraFW/Apps/: AppBase.h
TuscaroraFW/Apps/FWP/: FanOutFWP.cpp  FanOutFWP.h
TuscaroraFW/Apps/Gossip/: BasicGossipApp.h
TuscaroraFW/Config/: 16wf-85nodes.cnf  1wf-10nodes-wifi-ack.cnf  2sw-20nodes-full-est.cnf  2wf-10nodes-sw.cnf  2wf-20nodes-no-est.cnf  2wifi-20nodes-full-est.cnf  4wf-100nodes-full-est.cnf  4wf-20nodes-full-est.cnf  8wf-100nodes-full-est.cnf  8wf-20nodes-no-est.cnf  ReadMe.txt  hybrid-20nodes.cnf  pplsc.cnf  simple.cnf  slim.cnf
TuscaroraFW/Doc/: generateUserManual.sh  manualDeps.sh
TuscaroraFW/Doc/APIDoc/: UserAPI_doxy.conf  makeSADoc.sh  standaloneAPI_doxy.conf
TuscaroraFW/Doc/DevManual/: GettingStarted.tex  InterLayerComms.tex  PatternDevelopement.tex  PatternExample.tex  TuscBib.bib  TuscDevManual.aux  TuscDevManual.bbl  TuscDevManual.blg  TuscDevManual.idx  TuscDevManual.tex  TuscDevManual.toc  WaveformDevelopement.tex  application.tex  cppStyling.tex  intro.tex  linkEstimationAndDiscovery.tex  pal.tex  patternBase.tex  scrbookStyles.tex  testing.tex
TuscaroraFW/Doc/SlimWaveformManual/: CommandsPackagesStyling.tex  ComponentsofSLIM.tex  SlimModeTable.tex  SlimNetDeviceTableofAttributes.tex  SlimPhyTableofAttributes.tex  SlimTxVectorTable.tex  SlimWaveformUserManual.tex  TuscaroraSlimChannelTableofAttributes.tex  configuration.tex  intro.tex  support.tex
TuscaroraFW/Framework/: FrameworkConstants.h
TuscaroraFW/Framework/PWI/: FrameworkBase.cpp  FrameworkBase.h  PatternClient.h  StandardFI.cpp  StandardFI.h
TuscaroraFW/Framework/PolicyManager/: DefaultPolicies.h  PolicyManager.cpp  PolicyManager.h
TuscaroraFW/Framework/Services/: Services.h
TuscaroraFW/Include/Base/: 128BitTypes.h  AppTypes.h  BasicTypes.h  Callback.h  Delegate.h  FixedPoint.h  FrameworkTypes.h  Interface.h  TimeI.h
TuscaroraFW/Include/Interfaces/: Readme.dox
TuscaroraFW/Include/Misc/: EventI.h  ScheduleI.h
TuscaroraFW/Include/PAL/: FileLogger.h  HistoryI.h  PAL.h  SysTime.h  Timer.h  Utils.h
TuscaroraFW/Include/Sys/: Run.h  RuntimeOpts.h  SimulationOpts.h  SocketShim.h  commandline.h  netconvert.h
TuscaroraFW/Include/Test/: ModuleTesterBase.h
TuscaroraFW/Install/: BashOnWindows_install.sh  Install_NETMF.txt  Jenkinsntallation.txt  Makefile  appendPaths.sh  build_native.sh  checkPrevTuscInstall.sh  createCommmitForInstall.sh  createMercBranch.sh  gcc5.x.patch.sh  installPatches.sh  safepatch.sh  setupV1.sh  writePatch.pl
TuscaroraFW/Lib/: Misc.h
TuscaroraFW/Lib/Buffers/: FifoList.h  PacketCollectorI.h
TuscaroraFW/Lib/DS/: AVLBinarySearchTreeT.h  BSTMapT.h  BiBSTMapT.h  BinarySearchTreeT.h  FAAVLBinarySearchTreeT.h  FABSTMapT.h  FABiBSTMapT.h  FAListT.h  FixedBitMapT.h  GenericMessages.h  HeapT.h  ListMapT.h  ListT.h  SimpleGenericComparator.h  SortedListT.h
TuscaroraFW/Lib/ExternalServices/: TimeStamping.h
TuscaroraFW/Lib/Framework/: FrameworkStat.h
TuscaroraFW/Lib/KernalSignals/: IO_Signals.cpp  IO_Signals.h
TuscaroraFW/Lib/Logs/: log.h  logPacket.h  logString.h
TuscaroraFW/Lib/Math/: Rand.h  rng-seed-manager.cpp
TuscaroraFW/Lib/Misc/: Debug.cpp  Debug.h  ElapsedTime.h  LogString.cpp  LogString.h  MemChunkI.h  MemMap.h  compat-util.h  counter.h  datastructs.h  endian.h  getenv.h  lcg.h  logString.h
TuscaroraFW/Lib/PAL/: Event.cpp  Event.h  FileLoggerImpl.h  PAL_Lib.h  Timer.cpp  TimerImpl.cpp  TimerImpl.h
TuscaroraFW/Lib/Shims/: ShimMessages.h  WF_API_Calls.h
TuscaroraFW/Lib/Waveform/: Common.cpp  Common.h  WF_Wrapper_I.h
TuscaroraFW/Patchs/: Readme_Patches.txt  wscript.patch  wscript.patch.old
TuscaroraFW/Patchs/model/: Sigio.patch  dce-env.cc.patch  dce.cc.patch  libc-dce.cc.patch  libc-ns3.h.patch
TuscaroraFW/Patterns/: PTN_PacketHandling.h  PTN_Utils.cpp  PTN_Utils.h  PatternBase.cpp
TuscaroraFW/Patterns/FloodingWithPruning/: FWP.cpp  FWP.h  StandardFWPI.cpp  StandardFWPI.h
TuscaroraFW/Patterns/Gossip/: AppGossipShimMessages.h  Gossip.h  StandardGossipI.cpp  StandardGossipI.h
TuscaroraFW/Patterns/Pplsc/: Pplsc.cpp  Pplsc.h
TuscaroraFW/Patterns/RCop/: BCop.cpp  BCop.h  Cop.cpp  Cop.h  CopTypes.h  RCop.cpp  RCop.h  README.md
TuscaroraFW/Platform/: PlatformSelector.h  Toolchain-Emote-CortexM3-ARM.cmake  Toolchain-dsp-sysbiosv6-c66.cmake  Toolchain-linux-arm-arago.cmake  Toolchain-linux-arm-rpi.cmake  Toolchain-linux-x86_64.cmake  Toolchain-ns3-dce.cmake  linux
TuscaroraFW/Platform/Shims/: WF_API_Calls.h
TuscaroraFW/Platform/dce/: PlatformConfig.cpp  PlatformConfig.h
TuscaroraFW/Platform/eMote/: PlatformConfig.cpp  PlatformConfig.h
TuscaroraFW/Platform/linux/: PlatformConfig.cpp  PlatformConfig.h
TuscaroraFW/Platform/linux-multiprocess/: Deployment.h  InitFramework_cpp  PlatformConfig.h
TuscaroraFW/Platform/linux-singleprocess/: Deployment.h  PlatformConfig.h
TuscaroraFW/Scripts/Frisson/: bestpath  break  emulation  evaluation1  find_ratio  top
TuscaroraFW/Scripts/Frissonscript/: Frisson_Evaluation  Frisson_test  bestpath_vector (copy).cpp  bestpath_vector.cpp  break.cpp  clear_emulation.sh  efficiency.cpp  evaluation.cpp  final_result  hoge  oracle_current.cpp  shortestpath_current.cpp  test.cpp  top
TuscaroraFW/Scripts/GroundTruthLinkDetection/: AnalyzeCourseChangevsMemMap.m  AnalyzeFakeLinks.m  AnalyzeLinkDurations.m  AnalyzeMissingLinks.m  AnalyzeTimeIntervalBetweenBreakandReestablishment.m  CalculateLinksFromLocationDatas.m  CalculatePositionsAtGivenTime.m  CalculateSTATE_MATRIX_BasedOnCN.m  CheckCourseChangevsMemMap.m  DistSqPoly.m  FittingDataintoTruncatedNormal.m  GenerateRandomWayPointModel.m  Load_STATE_MATRIX_Indicies.m  MapMMAPFile.m  (+14 more)
TuscaroraFW/Tests/: FW_Init.h  TestDescriptions.txt
TuscaroraFW/ns-3-dce/: cleanAndRun.sh  cleanAndRunWithGdb.sh
(+795 files in other folders)
